--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.9",
+    "expo": "^53.0.9",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
@@ -29,7 +29,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "tailwindcss": "^3.4.17"
