--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-document-picker": "^9.3.1",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "5.4.0",
