--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-document-picker": "^9.3.1",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-linear-gradient": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
