--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.6",
+    "date-fns": "^4.1.0",
     "expo": "53.0.10",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/date-fns": "^2.6.3",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "jest": "^29.2.1",
