--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-native": "0.79.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.3.1",
