--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.6",
     "date-fns": "^4.1.0",
-    "expo": "53.0.10",
+    "expo": "^53.0.11",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.5",
@@ -30,7 +30,6 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
-    "jest-expo": "~53.0.6",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -54,7 +53,7 @@
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.7",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
