--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "^5.14.5",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
