--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.80.7",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "expo": "^53.0.11",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
+    "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
@@ -30,6 +33,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
+    "lucide-react-native": "^0.516.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
