--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "^14.1.4",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
@@ -50,8 +52,7 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-secure-store": "~14.2.3"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
