--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.80.7",
@@ -29,18 +29,18 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "5.1.0",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "14.2.0",
     "lucide-react-native": "^0.516.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.24.0",
