--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/date-fns": "^2.6.3",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "expo-module-scripts": "^4.1.9",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.7",
     "react-test-renderer": "19.0.0",
